# proxy-lens

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  justfile
docker/proxy-lens/: Caddyfile
examples/chained-apps-no-propagation/: README.md  compose.yml  justfile  server.Dockerfile
examples/chained-apps-no-propagation/app1/: app.py  compose.yml
examples/chained-apps-no-propagation/app2/: Dockerfile  app.py  compose.yml
examples/chained-apps-no-propagation/app3/: app.py  compose.yml
examples/chained-apps-no-propagation/proxy/: Dockerfile
examples/chained-apps-with-manual-propagation/: README.md  compose.yml  justfile
examples/chained-apps-with-manual-propagation/app1/: Caddyfile  Dockerfile  compose.yml
examples/chained-apps-with-manual-propagation/app2/: Caddyfile  app.py  compose.yml
examples/chained-apps-with-manual-propagation/app3/: app.py  compose.yml
examples/chained-apps-with-manual-propagation/proxy/: Dockerfile
examples/chained-apps-with-otel/: README.md  compose.yml  justfile
examples/chained-apps-with-otel/app1/: Caddyfile  Dockerfile  app.js  compose.yml  entrypoint.sh  package.json
examples/chained-apps-with-otel/app2/: Caddyfile  Dockerfile  Program.cs  app2.csproj  compose.yml  entrypoint.sh
examples/chained-apps-with-otel/app3/: Caddyfile  app.py  compose.yml  requirements.txt
examples/chained-apps-with-otel/proxy/: Dockerfile  run_addon.py
examples/chained-apps-with-propagation/: README.md  compose.yml  justfile
examples/chained-apps-with-propagation/app1/: app.py  compose.yml
examples/chained-apps-with-propagation/app2/: app.py  compose.yml
examples/chained-apps-with-propagation/app3/: Caddyfile  app.py  compose.yml
examples/chained-apps-with-propagation/proxy/: Dockerfile
hack/: sync_version.py
mitmproxy_addon/: README.md  justfile  pyproject.toml
mitmproxy_addon/docs/: spec.md
mitmproxy_addon/src/proxylens_mitmproxy/: __init__.py  addon.py  addon_test.py  client.py  client_test.py  models.py  models_test.py  propagation.py  propagation_test.py  testing.py
mitmproxy_addon/tests/: conftest.py  test_proxylens_mitmproxy_integration.py  test_server_client_integration.py  test_test_mitm_proxy_integration.py
server/: .gitignore  README.md  justfile  pyproject.toml
server/docs/: architecture.md  spec.md
server/src/proxylens_server/: __init__.py  __main__.py  app.py  bootstrap.py  cli.py  cli_test.py  config.py
server/src/proxylens_server/common/: http.py  identity.py  identity_test.py  json.py  time.py
server/src/proxylens_server/domain/: __init__.py  errors.py  event.py  request.py
server/src/proxylens_server/infra/filters/: script_runner.py  script_runner_test.py
server/src/proxylens_server/infra/persistence/: sqlite.py
server/src/proxylens_server/infra/persistence/repositories/: blobs.py  deferred_events.py  events.py  requests.py  tombstones.py
server/src/proxylens_server/infra/routes/blobs/: dtos.py  router.py
server/src/proxylens_server/infra/routes/docs/: router.py
server/src/proxylens_server/infra/routes/events/: dtos.py  router.py
server/src/proxylens_server/infra/routes/requests/: dtos.py  router.py
server/src/proxylens_server/use_cases/: clear_all.py  clear_tombstones.py  delete_request.py  delete_requests.py  get_request.py  get_request_body.py  get_request_events.py  get_response_body.py  get_response_detail.py  ingest_events.py  ingest_events_test.py  list_requests.py  request_histogram.py  upload_blob.py  vacuum.py
server/tests/: test_container_integration.py  test_server_integration.py  test_time_precision.py
ui/: .env.example  biome.json  build.ts  dev-server.ts  index.html  package-lock.json  package.json  runtime-config.js  tsconfig.app.json  tsconfig.build.json  tsconfig.json  vite.config.ts
ui/src/: api.test.ts  api.ts  app.css  app.tsx  body-preview.test.ts  body-preview.ts  diagram.test.ts  diagram.ts  index.css  main.tsx  types.ts  utils.test.ts  utils.ts
ui/src/components/: details-sidebar.test.tsx  details-sidebar.tsx  histogram.tsx  icon.tsx  request-list.tsx  request-toolbar.tsx  sequence-diagram.tsx  token-input.tsx  tri-state-toggle.tsx
ui/src/test/: setup.ts
