[project]
name = "proxylens-server"
version = "0.1.0"
description = "ProxyLens Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.135.1",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0.2,<7",
  "scalar-fastapi==1.8.1",
  "uvicorn[standard]>=0.35,<0.39",
]

[project.scripts]
proxylens-server = "proxylens_server.cli:main"

[dependency-groups]
dev = [
  "black>=25.1,<26",
  "httpx>=0.28,<0.29",
  "pytest==9.0.2",
  "pytest-watch>=4.2,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxylens_server"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = "-q"
python_files = ["*_test.py", "test_*.py"]
